cabal-version:      3.0
name:               dragonlex
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Cody Duong
maintainer:         duongcody507@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable dragonlex
    import:           warnings
    main-is:          dragonlex.hs
    build-depends:    base >= 4.0.0.0 && <= 4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable lexer
    main-is:          lexer.hs
    build-depends:    base >= 4.0.0.0 && <= 4.17.2.1,
                      regex-tdfa
    hs-source-dirs:   .
    default-language: Haskell2010
